[workspace]
exclude = []
resolver = "2"
members = ["cryptoinfo", "modeldata"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "1.0.0"
readme = "README.md"
description = "It's a cryptoinfo client."
authors = ["Heng30 <rongheng30@gmail.com>"]
keywords = ["Rust", "GUI", "QML", "Crypto"]
homepage = "https://github.com/Heng30/cryptoinfo"
repository = "https://github.com/Heng30/cryptoinfo"


[profile.dev]
debug = "full"
incremental = true

[profile.release]
lto = true
debug = true
strip = true
panic = "abort"
opt-level = "s"
codegen-units = 1
incremental = true

[workspace.dependencies]
cpp = "0.5"
log = "0.4"
duct = "1.0"
cstr = "0.2"
serde = "1.0"
image = "0.25"
tokio = "1.45"
chrono = "0.4"
semver = "1.0"
qrcode = "0.14"
qttypes = "0.2"
reqwest = "0.12"
fs_extra = "1.3"
clipboard = "0.5"
cpp_build = "0.5"
serde_json = "1.0"
env_logger = "0.11"
crypto-hash = "0.3"
lazy_static = "1.5"
qmetaobject = "0.2"
serde_derive = "1.0"
platform-dirs = "0.3"
embed-resource = "3.0"

modeldata = { path = "./modeldata" }
